JWT minilashtirildi, auth/me da permision qaytarildi, frontenda menular ko'rsatiladigan qilindi